--- a/back/package.json
+++ b/back/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build db": "node src/config/sqlite.js"
   },
   "author": "SurisCode",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "path": "^0.12.7",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
