Ready the API to save words and check the palindrome posibility

--- a/back/package.json
+++ b/back/package.json
@@ -8,7 +8,7 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build db": "node src/config/sqlite.js"
+    "db": "node src/models/sqlite.js"
   },
   "author": "SurisCode",
   "license": "ISC",
